processing a single page (indexPage controller method)